# deshima-sensitivity

./: .buildinfo  .gitignore  .zenodo.json  Dl_at_z2.py  ISS_sensitivity.ipynb  ISS_sensitivity_i.ipynb  ISS_sensitivity_ii.ipynb  ISS_sensitivity_iii.ipynb  LICENSE  README.md  configure  demo_sensitivity-Copy1.ipynb  desim.py  environment.yml  genindex.html  index.html  lineflux.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  sensitivity.ipynb
.devcontainer/: Dockerfile  devcontainer.json
.doctrees/: environment.pickle  index.doctree
.doctrees/_apidoc/: deshima_sensitivity.atmosphere.doctree  deshima_sensitivity.doctree  deshima_sensitivity.filter.doctree  deshima_sensitivity.galaxy.doctree  deshima_sensitivity.instruments.doctree  deshima_sensitivity.physics.doctree  deshima_sensitivity.plotting.doctree  deshima_sensitivity.simulator.doctree
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: gh-pages.yml  publish.yml  pypi.yml  test.yml  tests.yml
.ipynb_checkpoints/: demo_sensitivity-Copy1-checkpoint.ipynb
_apidoc/: deshima_sensitivity.atmosphere.html  deshima_sensitivity.filter.html  deshima_sensitivity.galaxy.html  deshima_sensitivity.html  deshima_sensitivity.instruments.html  deshima_sensitivity.physics.html  deshima_sensitivity.plotting.html  deshima_sensitivity.simulator.html
_modules/: index.html
_modules/deshima_sensitivity/: atmosphere.html  filter.html  galaxy.html  instruments.html  physics.html  plotting.html  simulator.html
_sources/_apidoc/: deshima_sensitivity.atmosphere.rst.txt  deshima_sensitivity.filter.rst.txt  deshima_sensitivity.instruments.rst.txt  deshima_sensitivity.physics.rst.txt  deshima_sensitivity.plotting.rst.txt  deshima_sensitivity.rst.txt  deshima_sensitivity.simulator.rst.txt
deshima_sensitivity/: __init__.py  atmosphere.py  filter.py  galaxy.py  instruments.py  physics.py  plotting.py  simulator.py
deshima_sensitivity/data/: atm.csv
deshima_sensitivity/tests/: test_physics.py
desim/: __init__.py  atmosphere.py  consts.py  galaxy.py  instruments.py  physics.py  plotting.py  simulator.py
desim/data/: z_Dl.csv
docs/: build  conf.py  index.md  index.rst
docs/_build/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree
docs/_build/.doctrees/_apidoc/: deshima_sensitivity.atmosphere.doctree  deshima_sensitivity.doctree  deshima_sensitivity.galaxy.doctree  deshima_sensitivity.instruments.doctree  deshima_sensitivity.physics.doctree  deshima_sensitivity.plotting.doctree  deshima_sensitivity.simulator.doctree
docs/_build/_apidoc/: deshima_sensitivity.atmosphere.html  deshima_sensitivity.galaxy.html  deshima_sensitivity.html  deshima_sensitivity.instruments.html  deshima_sensitivity.physics.html  deshima_sensitivity.plotting.html  deshima_sensitivity.simulator.html
docs/_build/_modules/: index.html
docs/_build/_modules/deshima_sensitivity/: atmosphere.html  galaxy.html  instruments.html  physics.html  plotting.html  simulator.html
docs/_build/_sources/_apidoc/: deshima_sensitivity.galaxy.rst.txt  deshima_sensitivity.rst.txt
etc/: builddoc  builddocs
examples/: basic_sensitivity.html  basic_sensitivity.ipynb  sensitivity_goal_baseline_D1_lineflux.ipynb
misc/: lineflux.py  plot_data_recal.csv
tests/: test_filter.py  test_package.py  test_physics.py
