[tool.poetry]
name = "deshima-sensitivity"
version = "0.2.7"
description = "Sensitivity calculator for DESHIMA-type spectrometers"
authors = ["Akira Endo <a.endo@tudelft.nl>"]
maintainers = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Yohei Togami <y.togami@a.phys.nagoya-u.ac.jp>",
    "Keiichi Matsuda <matsuda@a.phys.nagoya-u.ac.jp>",
    "Masato Hagimoto <hagimoto@a.phys.nagoya-u.ac.jp>",
    "Stefanie Brackenhoff <s.a.brackenhoff@student.tudelft.nl>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/deshima-sensitivity"
documentation = "https://deshima-dev.github.io/deshima-sensitivity/"

[tool.poetry.dependencies]
python = ">= 3.7, <= 3.9"
matplotlib = "^3.2"
numpy = "^1.19"
scipy = "^1.4"
pandas = "^1.1"
jupyter-io = "^0.2"

[tool.poetry.dev-dependencies]
black = "^21.5b"
flake8 = "^3.9"
jupyterlab = "^3.0"
pydata-sphinx-theme = "^0.6"
pytest = "^6.2"
sphinx = "^4.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
