[tool.poetry]
name = "deshima-sensitivity"
version = "0.3.0"
description = "Sensitivity calculator for DESHIMA-type spectrometers"
authors = ["Akira Endo <a.endo@tudelft.nl>"]
maintainers = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Yohei Togami <y.togami@a.phys.nagoya-u.ac.jp>",
    "Keiichi Matsuda <matsuda@a.phys.nagoya-u.ac.jp>",
    "Masato Hagimoto <hagimoto@a.phys.nagoya-u.ac.jp>",
    "Stefanie Brackenhoff <s.a.brackenhoff@student.tudelft.nl>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/deshima-sensitivity"
documentation = "https://deshima-dev.github.io/deshima-sensitivity/"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.10"
jupyter-io = "^0.2"
lmfit = "^1.0"
matplotlib = "^3.2"
numpy = "^1.19"
pandas = "^1.1"
scipy = "^1.4"

[tool.poetry.dev-dependencies]
black = "^21.12b"
ipykernel = "^6.7"
ipython = "^7.31"
myst-parser = "^0.16"
pydata-sphinx-theme = "^0.8"
pytest = "^6.2"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
