[tool.poetry]
name = "deshima-sensitivity"
version = "0.4.0"
description = "Sensitivity calculator for DESHIMA-type spectrometers"
authors = ["Akira Endo <a.endo@tudelft.nl>"]
maintainers = [
    "Akio Taniguchi <taniguchi@a.phys.nagoya-u.ac.jp>",
    "Yohei Togami <y.togami@a.phys.nagoya-u.ac.jp>",
    "Keiichi Matsuda <matsuda@a.phys.nagoya-u.ac.jp>",
    "Masato Hagimoto <hagimoto@a.phys.nagoya-u.ac.jp>",
    "Stefanie Brackenhoff <s.a.brackenhoff@student.tudelft.nl>",
    "Joris Tiebosch <j.p.tiebosch@student.tudelft.nl>",
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/deshima-dev/deshima-sensitivity"
documentation = "https://deshima-dev.github.io/deshima-sensitivity/"

[tool.poetry.dependencies]
python = ">=3.7.1, <3.11"
jupyter-io = "^0.2"
lmfit = "^1.0"
matplotlib = "^3.2"
numpy = [
    { version = ">=1.20, <1.22", python = ">=3.7.1, <3.8" },
    { version = "^1.20", python = ">=3.8, <3.11" },
]
pandas = [
    { version = ">=1.3, <1.4", python = ">=3.7.1, <3.8" },
    { version = "^1.3", python = ">=3.8, <3.11" },
]
scipy = "^1.4"

[tool.poetry.dev-dependencies]
black = "^22.3"
ipython = [
    { version = "^7.34", python = ">=3.7.1, <3.8" },
    { version = "^8.4", python = ">=3.8, <3.11" },
]
myst-parser = "^0.18"
pydata-sphinx-theme = "^0.9"
pytest = "^7.1"
sphinx = "^5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
